@@ -9,9 +9,9 @@ import static org.mockito.Mockito.never;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
-import java.util.Collections;
 import java.util.List;
 
+import com.hartwig.ApiException;
 import com.hartwig.api.RunApi;
 import com.hartwig.api.SampleApi;
 import com.hartwig.api.SetApi;
@@ -52,7 +52,7 @@ public class ApiRerunTest {
         sampleSet = new SampleSet().id(sampleSetId);
 
         when(sampleApi.list(null, null, null, null, SampleType.TUMOR, biopsy, null)).thenReturn(samples);
-        when(runs.list(null, null, sampleSet.getId(), null, null, null, null, null)).thenReturn(List.of(validatedRun));
+        when(sets.canonical(sampleId)).thenReturn(sampleSet);
     }
 
     @Test
@@ -72,10 +72,26 @@ public class ApiRerunTest {
     }
 
     @Test(expected = IllegalArgumentException.class)
-    public void shouldThrowIllegalArgumentIfNoSampleSetExistsForSample() {
-        when(sets.list(null, samples.get(0).getId(), true)).thenReturn(Collections.emptyList());
-        assertThat(new ApiRerun(runs, sets, sampleApi, bucket, version).create(biopsy)).isNull();
-        verify(runs, never()).create(any());
+    public void shouldThrowIllegalArgumentExceptionIfNoCanonicalSetExistsForSample() {
+        when(sets.canonical(sampleId)).thenThrow(new ApiException());
+        new ApiRerun(runs, sets, sampleApi, bucket, version).create(biopsy);
+    }
+
+    @Test
+    public void shouldSelectSetWithNonInvalidatedRunsAsParentOfRunWhenMultipleSetsExist() {
+        Run invalidatedRun = new Run().status(Status.INVALIDATED);
+        SampleSet setWithOnlyInvalidatedRuns = new SampleSet().id(sampleSetId + 1);
+        when(runs.list(null, null, setWithOnlyInvalidatedRuns.getId(), null, null, null, null, null)).thenReturn(List.of(invalidatedRun));
+        when(sets.list(null, samples.get(0).getId(), true)).thenReturn(List.of(sampleSet, setWithOnlyInvalidatedRuns));
+
+        when(runs.list(null, Ini.RERUN_INI, sampleSet.getId(), version, version, null, null, null)).thenReturn(emptyList());
+        ArgumentCaptor<CreateRun> createRunCaptor = ArgumentCaptor.forClass(CreateRun.class);
+        when(runs.create(createRunCaptor.capture())).thenReturn(new RunCreated().id(3L));
+
+        assertThat(new ApiRerun(runs, sets, sampleApi, bucket, version).create(biopsy)).isNotNull();
+        CreateRun createRun = createRunCaptor.getValue();
+        assertThat(createRun).isNotNull();
+        assertThat(createRun.getSetId()).isEqualTo(sampleSetId);
     }
 
     @Test
